syntax = "proto3";

package com.ceaser.proto;

option java_package="com.ceaser.proto";
option java_outer_classname= "StudentProto";
option java_multiple_files = true;

service StudentService{
    rpc getRealNameByUserName(MyRequest) returns (MyResponse){}

    rpc getStudentsByAge(StudentRequest) returns (stream StudentResponse){}

    rpc getStudentsWraperByAge(stream StudentRequest) returns ( StudentResponseList){}

    rpc biTalk(stream StreamRequest) returns (stream StreamResponse){}

}

message MyRequest{
    string username = 1;
}

message MyResponse{
    string realname = 2;
}

message StudentRequest{
    int32 age=1;
}
message StudentResponse{
    string name=1;
    int32 age=2;
    string city=3;
}

message StudentResponseList{
    repeated StudentResponse student=1;
}


message StreamRequest{
    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}